[package]
name = "autoload"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "rust autoload macro,single scan load ioc aop "
documentation = "https://docs.rs/autoload"
repository = "https://github.com/450220020/autocall.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro=true
[dependencies]
syn = { version = "1.0.84", features=["full", "fold", "printing"] }
quote ="1.0.14"
proc-macro2 = "1.0.36"
substring="1.4.5"
pest = "2.1.3"
pest_derive = "2.1.0"
log="0.4.14"
parking_lot="0.12.0"
singlemap="0.1.3"