[package]
name = "singlemap"
version = "0.1.3"
edition = "2021"
readme = "README.md"
license = "LICENSE"
description = "rust single map"
documentation = "https://docs.rs/singlemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring="1.4.5"
once_cell="1.9.0"
parking_lot="0.12.0"
dashmap="5.0.0"