[package]
name = "singlemap"
version = "0.1.6"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "rust single map"
documentation = "https://docs.rs/singlemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell="1.9.0"
parking_lot="0.12.0"
dashmap="5.1.0"