[package]
name = "rbatis-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
singlemap="0.1.5"
# autoload={path="../autoload"}
# singlemap={path="../singlemap"}
log4rs="1"
log="0.4.14"
serde_json="1"
futures = "0.3"
async-std = {version="1.10.0",features=["attributes"]}
rbatis = { version = "3.0.31", default-features = false, features = ["sqlite","mysql","runtime-async-std-rustls"] }
dashmap = "5.1.0"